# composite

./: CMakeLists.txt  README.md  autonum.cpp  autonum.hpp  depth.cpp  depth.hpp  identificable.hpp  main.cpp  trait.hpp  trait_compose.hpp
.github/workflows/: _build.yml  _parse_version.yml  ci.yml  conan_package.yml  create_tag_release.yml  published_release.yml  tag_release.yml
src/: CMakeLists.txt  graph_undirected.hpp  graph_undirected_composite.hpp  trait.hpp  trait_compose.hpp  tree.hpp  tree_composite.hpp  visitor.hpp
src/graph_undirected/: CMakeLists.txt  graph_undirected.hpp  graph_undirected_composite.hpp  is_add_function.hpp  visitor.hpp  visitor_graph.hpp  visitor_wrapper_cast.hpp
src/impl/: func_parameter_pack.hpp  is_add_function.hpp  on_part_added.hpp  refl.hpp  visitor_trait.hpp  visitor_wrapper_cast.hpp
src/tree/: CMakeLists.txt  _is_add_function.hpp  _visitor_tree.hpp  _visitor_wrapper_cast.hpp  is_add_function.hpp  tree.hpp  tree_composite.hpp  visitor.hpp  visitor_tree.hpp  visitor_wrapper_cast.hpp
tests/: CMakeLists.txt  test_trait_addpart.cpp  test_trait_simple.cpp  test_visitor.cpp
tests/test_composite/: test_composite.cpp  test_composite3.cpp
tests/test_graph_undirected/test_composite/: test_composite.cpp  test_composite3.cpp
tests/test_graph_undirected/test_simple/: test_add_function.cpp  test_node_create.cpp  test_visitor.cpp
tests/test_single/: test_trait_addpart.cpp  test_trait_simple.cpp  test_visitor.cpp
tests/test_tree/test_composite/: test_composite.cpp  test_composite3.cpp
tests/test_tree/test_simple/: test_add_function.cpp  test_node_simple.cpp  test_visitor.cpp
